dev-itpro/api-reference/v1.0/index.md
---
title: (v1.0) API (v1.0) for Dynamics 365 Business Central
description: (v1.0) Reference content for the API (v1.0) endpoint for integration with Dynamics 365 Business Central.
author: SusanneWindfeldPedersen
ms.topic: get-started
ms.devlang: al
ms.date: 05/01/2024
ms.update-cycle: 1095-days
ms.author: solsen
ms.custom: evergreen
ms.reviewer: solsen
---

# Welcome to the API (v1.0) for [!INCLUDE[prod_short](../../includes/prod_short.md)]

With [!INCLUDE[prod_short](../../includes/prod_short.md)] you can create Connect apps. Connect apps establish a point-to-point connection between Dynamics 365 Business Central and a 3rd party solution or service and is typically created using standard REST API to interchange data. Any coding language capable of calling REST APIs can be used to develop your Connect app. For more information to get started with Connect apps, see [Developing Connect Apps for Dynamics 365 Business Central](../../developer/devenv-develop-connect-apps.md).

> [!TIP]  
> Looking for version 2.0 of the [!INCLUDE[prod_short](../../includes/prod_short.md)] API? See [Welcome to the API(v2.0) for Business Central](../v2.0/index.md).

## Microsoft APIs Terms of Use

Before you start using the Business Central APIs, please familiarize yourself with the [Microsoft APIs Terms of Use](/legal/microsoft-apis/terms-of-use).

## Enabling APIs

For information about enabling APIs for [!INCLUDE[prod_short](../../includes/prod_short.md)] see [Enabling the APIs for Dynamics 365 Business Central](enabling-apis-for-dynamics-nav.md).

## Extending APIs

[!INCLUDE[extending_APIs_is_not_supported](../../developer/includes/include-extending-APIs-is-not-supported.md)]

## Related information

[Microsoft APIs Terms of Use](/legal/microsoft-apis/terms-of-use)   
[Enabling the APIs for Dynamics 365 Business Central](enabling-apis-for-dynamics-nav.md)  
[Development in AL](../../developer/devenv-dev-overview.md)  
[Developing Connect Apps for Dynamics 365 Business Central](../../developer/devenv-develop-connect-apps.md)  
[OpenAPI Specification](dynamics-open-api.md)  