dev-itpro/api-reference/v2.0/index.md
---
title: API (v2.0) for Dynamics 365 Business Central
description: Reference content for the API (v2.0) endpoint for integration with Dynamics 365 Business Central.
author: SusanneWindfeldPedersen
ms.topic: get-started
ms.devlang: al
ms.date: 08/10/2026
ms.author: solsen
ms.reviewer: solsen
---

# Welcome to the API (v2.0) for Business Central

With [!INCLUDE[prod_short](../../includes/prod_short.md)] you can create Connect apps. Connect apps establish a point-to-point connection between Dynamics 365 Business Central and a third party solution or service and is typically created using standard REST API to interchange data. Any coding language capable of calling REST APIs can be used to develop your Connect app. For more information to get started with Connect apps, see [Developing connect apps for Dynamics 365 Business Central](/dynamics365/business-central/dev-itpro/developer/devenv-develop-connect-apps).

> [!TIP]  
> For inspiration and examples, see the open source [ALAppExtensions](https://github.com/microsoft/ALAppExtensions/tree/main/Apps/W1/APIV2/app/src/pages) repo. Here you'll find examples of API pages written in AL.

## Microsoft APIs Terms of Use

Before you start using the Business Central APIs, familiarize yourself with the [Microsoft APIs Terms of Use](/legal/microsoft-apis/terms-of-use).

## Enabling APIs

APIs for [!INCLUDE[prod_short](../../includes/prod_short.md)] online are enabled by default. Learn more about enabling APIs for [!INCLUDE[prod_short](../../includes/prod_short.md)] on-premises in [Enabling the APIs for Dynamics 365 Business Central](enabling-apis-for-dynamics-nav.md).

## Available APIs

For a complete list of available APIs and their operations, use the table of contents.

## Extending APIs

[!INCLUDE[extending_APIs_is_not_supported](../../developer/includes/include-extending-APIs-is-not-supported.md)]

## Transition from API v1.0 to API v2.0

Learn more about transitioning from API v1.0 to API v2.0 in [Transition from API v1.0 to API v2.0](transition-to-api-v2.0.md).

## Related information

[Microsoft APIs Terms of Use](/legal/microsoft-apis/terms-of-use)  
[Enabling the APIs for Dynamics 365 Business Central](enabling-apis-for-dynamics-nav.md)  
[Development in AL](/dynamics365/business-central/dev-itpro/developer/devenv-dev-overview)  
[Analyzing incoming web services request telemetry](../../administration/telemetry-webservices-trace.md)  
[Developing connect apps for Dynamics 365 Business Central](/dynamics365/business-central/dev-itpro/developer/devenv-develop-connect-apps)  
[OpenAPI specification](dynamics-open-api.md)  
